--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = ""
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "aiogram>=3.21.0",
+    "gigachat>=0.1.42.post1",
+]
 
 [dependency-groups]
 dev = [
@@ -36,9 +39,6 @@ select = [
 ]
 ignore = [
     "D100",     # missing docstring in public module
-    "D101",
-    "D102",
-    "D103",
     "D104",     # missing docstring in public package
     "D105",     # missing docstring in magic methods
     "D106",     # missing docstring in public nested class
